# skillspector-quality

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  examples.md  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.github/: CODEOWNERS
.github/workflows/: cflite_pr.yml  ci.yml  codeql.yml  scorecard.yml
Formula/: skillspector-quality.rb
benchmarks/: README.md  run_benchmark.py  scenarios.py  structure_bench.py  validators.py
benchmarks/results/: 2026-06-15-anthropic-claude-haiku-4-5-20251001.json  2026-06-15-anthropic-claude-haiku-4-5-20251001.md  2026-06-15-anthropic-claude-opus-4-8.json  2026-06-15-anthropic-claude-opus-4-8.md  2026-06-15-anthropic-claude-sonnet-4-6.json  2026-06-15-anthropic-claude-sonnet-4-6.md  2026-06-15-openai-qwen2.5_32b.md  2026-06-26-anthropic-claude-haiku-4-5-20251001.json  2026-06-26-anthropic-claude-haiku-4-5-20251001.md  2026-06-26-structure-anthropic-claude-haiku-4-5-20251001.json  2026-06-26-structure-anthropic-claude-haiku-4-5-20251001.md
benchmarks/skills/flat/: SKILL.md  reference.md
benchmarks/skills/folder/: SKILL.md
benchmarks/skills/folder/reference/: billing.md  compliance.md  finance.md  platform.md  product.md  security.md
benchmarks/skills/monolith/: SKILL.md
ci-stubs/skillspector/: pyproject.toml
ci-stubs/skillspector/src/skillspector/: llm_utils.py  state.py
ci-stubs/skillspector/src/skillspector/nodes/: analyzers.py  build_context.py  meta_analyzer.py  report.py  resolve_input.py
docs/adr/: 0001-advisory-vs-scored-signals.md  0002-progressive-disclosure-volume-aware.md  0003-folder-structure-agent-benchmark.md
fuzz/: fuzz_scorers.py
scripts/: install.sh
src/skillspector_quality/: __init__.py  __main__.py  cli.py  graph.py  state.py
src/skillspector_quality/nodes/: __init__.py  quality_scorer.py
src/skillspector_quality/quality/: __init__.py  commentary.py  models.py  render.py  scorers.py
tests/: test_cli.py  test_cli_integration.py  test_quality_scorer.py  test_render.py  test_scorers.py  test_scorers_extra.py  test_self_scoring.py
tests/fixtures/good-skill/: SKILL.md  examples.md  reference.md
tests/fixtures/good-skill/scripts/: parse.py
tests/fixtures/messy-skill/: SKILL.md  notes.md  orphan.md
tests/fixtures/messy-skill/scripts/: messy.py
