[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillspector"
version = "2.1.4"
description = "CI stub for skillspector — satisfies the version pin without PyPI"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/skillspector"]
